# Corewar

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  author  corewar_test.sh  test.sh
champs/: Gagnant.cor  jumper2.cor  test
champs/cor/: Gagnant2.cor
includes/: corewar.h  op.h
logs/: my_log
sources/: aff.c  check.c  corewar.c  debug.c  flags.c  fork.c  game.c  ioutils.c  ld.c  live.c  lld.c  logging.c  main.c  op.c  op_handler.c  parse.c  player.c  register.c  shift_handler.c  st.c  ternar.c
sources/carriage/: carriage.c
sources/carriages/: carriage.c
sources/game/: check.c  cycle.c  field.c  game.c  op_handler.c  shift_handler.c
sources/operation/: define.c
sources/operations/: add.c  aff.c  and.c  fork.c  ld.c  ldi.c  lfork.c  live.c  lld.c  lldi.c  or.c  st.c  sti.c  sub.c  validate.c  xor.c  zjmp.c
sources/register/: conversations.c  operations.c
sources/registers/: conversations.c  operations.c  primitives.c
vm-champ-linux/: ex  ex.s
